--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "cors": "^2.8.5",
     "electron-is-dev": "^1.2.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -15,10 +19,12 @@
   },
   "scripts": {
     "start": "react-scripts start --no-sandbox",
-    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron . --no-sandbox \"",
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"yarn server-start\" \"wait-on http://localhost:3000 && electron . --no-sandbox \"",
     "build": "react-scripts build --no-sandbox",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server-build": "babel server --out-dir build-server",
+    "server-start": "nodemon --watch server --exec babel-node server/server.js"
   },
   "main": "public/main.js",
   "eslintConfig": {
@@ -40,6 +46,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.4",
     "concurrently": "^5.3.0",
     "electron": "^11.2.3",
     "electron-builder": "^22.9.1",
